--- a/Paint_1.csproj
+++ b/Paint_1.csproj
@@ -55,19 +55,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Paint.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Paint.Designer.cs">
+      <DependentUpon>Paint.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Paint.cs" />
-    <Compile Include="src\Shape.cs" />
-    <Compile Include="src\Types.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Shapes\Shape.cs" />
+    <Compile Include="Shapes\Line.cs" />
+    <Compile Include="Shapes\Triangle.cs" />
+    <Compile Include="Types.cs" />
+    <EmbeddedResource Include="Paint.resx">
+      <DependentUpon>Paint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -94,7 +95,31 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\Shapes\" />
+    <None Include="Resources\cursorRotateE.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateN.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateNE.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateNW.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateS.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateSE.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateSW.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cursorRotateW.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DrawLine.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
