--- a/Paint_1.csproj
+++ b/Paint_1.csproj
@@ -61,10 +61,19 @@
     <Compile Include="Paint.Designer.cs">
       <DependentUpon>Paint.cs</DependentUpon>
     </Compile>
+    <Compile Include="Primitives\Mat2.cs" />
+    <Compile Include="Primitives\Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shapes\Circle.cs" />
+    <Compile Include="Shapes\Ellipse.cs" />
+    <Compile Include="Shapes\Hexagon.cs" />
+    <Compile Include="Shapes\Pentagon.cs" />
+    <Compile Include="Shapes\Polygon.cs" />
+    <Compile Include="Shapes\Rectangle.cs" />
     <Compile Include="Shapes\Shape.cs" />
     <Compile Include="Shapes\Line.cs" />
+    <Compile Include="Shapes\SimpleShape.cs" />
     <Compile Include="Shapes\Triangle.cs" />
     <Compile Include="Types.cs" />
     <EmbeddedResource Include="Paint.resx">
@@ -120,6 +129,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\DrawLine.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ellipse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hexagon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\line.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pentagon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\polygon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rectangle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\triangle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fill.cur" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
